--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphoose",
   "private": false,
-  "version": "1.6.0",
+  "version": "1.7.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "description": "Transform a graphql type into a mongoose schema",
@@ -9,7 +9,7 @@
     "build": "rm -rf dist && tsc",
     "watch": "rm -rf dist && tsc -w",
     "prepublishOnly": "npm run build && npm test",
-    "test": "jest dist"
+    "test": "jest dist/tests"
   },
   "repository": {
     "type": "git",
